--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+input {
+  font-size: larger;
+}
+
+button {
+  font-size: larger;
+  margin-left: 15px;
+}
+
+#uid {
+  color: yellow;
+}
